...
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gFS-jU-iWD">
                                                    <rect key="frame" x="277" y="7" width="46" height="30"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="30" id="ANl-x1-qOt"/>
                                                        <constraint firstAttribute="width" constant="46" id="nKE-u1-dcz"/>
                                                    </constraints>
                                                    <state key="normal" title="Button"/>
                                                    <connections>
                                                        <segue destination="Uct-Vd-6D8" kind="show" id="vAD-AS-9hK"/>
                                                    </connections>
                                                </button>
                                            </subviews>
                                            <constraints>
...
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="27J-A0-qnE" id="ZVl-gv-NUq">
                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jRX-aV-gb2">
                                                    <rect key="frame" x="271" y="7" width="58" height="30"/>
                                                    <state key="normal" title="Network"/>
                                                    <connections>
                                                        <segue destination="2ba-8v-us6" kind="show" id="2gh-5r-SLB"/>
                                                    </connections>
                                                </button>
                                            </subviews>
                                            <constraints>
...
                        </sections>
                        <connections>
                            <outlet property="dataSource" destination="8GN-sI-AlJ" id="Ldp-ad-VkS"/>
                            <outlet property="delegate" destination="8GN-sI-AlJ" id="nPC-kc-bJZ"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Root View Controller" id="xjQ-vG-YxC"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="QhZ-Jc-3dl" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="291" y="-484"/>
        </scene>
        <!--Navigation Controller-->
...
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9gV-e4-ozD">
                                <rect key="frame" x="150" y="197" width="300" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="300" id="YZo-ny-eFx"/>
                                </constraints>
                                <state key="normal" title="OK Alert"/>
                                <connections>
                                    <action selector="showOKAlertButtonTapped:" destination="Avo-FS-UX3" eventType="touchUpInside" id="ATV-9C-ZSN"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
